# card-shedding

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: engine.py  factory.py  game.py  interface.py  main.py
src/schema/: card.py  deck.py  player.py
